<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/sp_background"
    tools:context=".ui.home.HomeFragment">

    <com.google.android.material.appbar.MaterialToolbar
        android:id="@+id/toolbar_home"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/sp_surface"
        android:minHeight="?attr/actionBarSize"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent">

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:paddingVertical="8dp">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/app_name"
                android:textAppearance="?attr/textAppearanceTitleLarge"
                android:textColor="@color/sp_text_primary" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/app_subtitle"
                android:textAppearance="?attr/textAppearanceBodySmall"
                android:textColor="@color/sp_text_secondary" />
        </LinearLayout>
    </com.google.android.material.appbar.MaterialToolbar>

    <!-- Centers the hero illustration + headline + description as a group within the space
         between the toolbar and the primary button, so this layer never has to fight the
         button/microcopy anchored to the bottom. -->
    <LinearLayout
        android:id="@+id/content_center"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:orientation="vertical"
        android:gravity="center"
        android:paddingHorizontal="@dimen/sp_spacing_xl"
        app:layout_constraintTop_toBottomOf="@id/toolbar_home"
        app:layout_constraintBottom_toTopOf="@id/btn_open_pdf"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent">

        <ImageView
            android:layout_width="120dp"
            android:layout_height="120dp"
            android:src="@drawable/ic_document_hero"
            android:contentDescription="@null"
            android:layout_marginBottom="@dimen/sp_spacing_lg" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/home_headline"
            android:textAppearance="?attr/textAppearanceHeadlineSmall"
            android:textColor="@color/sp_text_primary"
            android:textAlignment="center"
            android:layout_marginBottom="@dimen/sp_spacing_sm" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/home_description"
            android:textAppearance="?attr/textAppearanceBodyMedium"
            android:textColor="@color/sp_text_secondary"
            android:textAlignment="center" />
    </LinearLayout>

    <Button
        android:id="@+id/btn_open_pdf"
        android:layout_width="0dp"
        android:layout_height="56dp"
        android:text="@string/open_pdf"
        android:textAppearance="?attr/textAppearanceTitleMedium"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toTopOf="@id/tv_microcopy"
        android:layout_marginHorizontal="@dimen/sp_spacing_lg"
        android:layout_marginBottom="@dimen/sp_spacing_md" />

    <TextView
        android:id="@+id/tv_microcopy"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/home_microcopy"
        android:textAppearance="?attr/textAppearanceLabelSmall"
        android:textColor="@color/sp_text_secondary"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        android:layout_marginBottom="@dimen/sp_spacing_lg" />

</androidx.constraintlayout.widget.ConstraintLayout>
